--- a/Server/lenguaje.Server.csproj
+++ b/Server/lenguaje.Server.csproj
@@ -8,6 +8,7 @@
   
     <ItemGroup>
       <PackageReference Include="CitizenFX.Core.Server" Version="1.0.*" />
+      <PackageReference Include="YamlDotNet" Version="13.1.0" />
     </ItemGroup>
 </Project>
   
