Adding client lang for auth-interface

--- a/Client/language.Client.csproj
+++ b/Client/language.Client.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="CitizenFX.Sdk.Client/0.2.3">
     <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="13.1.0" />
     </ItemGroup>
 </Project>
